trend chart alignment issue

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -399,7 +399,7 @@ h1 {
 }
 
 .trend-chart {
-  margin-top: 10px;
+  margin-top: -15px;
 }
 
 .trend-chart hr {
